# mylog

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  test.cpp
blockqueue/: CMakeLists.txt  blockqueue.h
buffer/: CMakeLists.txt  buffer.cpp  buffer.h
cmake/: LogConfig.cmake  SimpleLogConfig.cmake
install/include/: blockqueue.h  buffer.h  log.h  pattern.h  sender.h  stdoutSender.h
install/lib/cmake/Log/: LogTargets.cmake
install/lib/cmake/SimpleLog/: SimpleLogTargets-noconfig.cmake  SimpleLogTargets.cmake
log/: CMakeLists.txt  log.cpp  log.h  pattern.h
sender/: CMakeLists.txt  fileSender.cpp  fileSender.h  level.h  sender.cpp  sender.h  stdoutSender.cpp  stdoutSender.h
